# git_user_manager

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  example.git_user_manager.config.toml
.github/workflows/: release.yml
src/: config.rs  edit.rs  list.rs  main.rs  parse.rs  reader.rs  store.rs  user.rs  utils.rs
