[package]
name = "git_user_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde_derive = "1.0.147"
serde = "1.0.147"
dirs = "4.0.0"
clap = { version = "4.0.18", features = ["derive"] }
read_input = "0.8.6"
