[package]
name = "git_user_manager"
version = "0.2.0"
edition = "2021"
description = "cli tool to quickly switch between git users"
keywords = ["git", "manager", "config", "user"]
categories = ["development-tools"]
repository = "https://github.com/Sarrus1/git_user_manager"
license = "MIT"

[[bin]]
name = "gum"
path = "src/main.rs"

[dependencies]
toml = "0.5.9"
serde_derive = "1.0.147"
serde = "1.0.147"
dirs = "4.0.0"
clap = { version = "4.0.18", features = ["derive"] }
read_input = "0.8.6"
colored = "2.0.0"
dialoguer = "0.10.2"
